# gdk

./: .dockerignore  .gitlab-ci.yml  CHANGELOG.md  CMakeLists.txt  meson.build
cmake/includes/: greenaddress.cmake  helpers.cmake
docs/source/: gdk-create-tx.rst  gdk-json.rst
include/: gdk.h
profiles/: android-arm64-v8a.cmake  android-armeabi-v7a.cmake  android-x86.cmake  android-x86_64.cmake  clang.cmake  common.cmake  gcc.cmake  ios-helpers.cmake  ios-iphone.cmake  ios-iphonesim.cmake  windows-mingw-w64.cmake
src/: CMakeLists.txt  auth_handler.cpp  boost_wrapper.hpp  ffi_c.cpp  ga_auth_handlers.cpp  ga_auth_handlers.hpp  ga_lightning.cpp  ga_lightning.hpp  ga_rust.cpp  ga_rust.hpp  ga_session.cpp  ga_session.hpp  ga_tx.cpp  ga_wally.cpp  ga_wally.hpp  meson.build  network_parameters.cpp  network_parameters.hpp  networks.hpp  session.cpp  session_impl.cpp  session_impl.hpp  transaction_utils.cpp  transaction_utils.hpp  utils.cpp  utils.hpp  wamp_transport.cpp
src/swift/GreenAddress/Sources/GreenAddress/: GreenAddress.swift
src/swig_java/: swig_gasdk.i
src/swig_python/: CMakeLists.txt  python_extra.py_in  setup.py.in
subprojects/: libevent.wrap  openssl.wrap
subprojects/gdk_rust/: Cargo.toml  flake.nix  meson.build  weaken-symbols
subprojects/gdk_rust/gdk_common/: Cargo.toml
subprojects/gdk_rust/gdk_common/src/: error.rs  exchange_rates.rs  greenlight.rs  lib.rs  model.rs  network.rs  session.rs
subprojects/gdk_rust/gdk_common/src/be/: address.rs
subprojects/gdk_rust/gdk_common/src/wally/: mod.rs
subprojects/gdk_rust/gdk_electrum/: Cargo.toml
subprojects/gdk_rust/gdk_electrum/src/: account.rs  error.rs  lib.rs  pset.rs  session.rs
subprojects/gdk_rust/gdk_electrum/src/headers/: bitcoin.rs  mod.rs
subprojects/gdk_rust/gdk_greenlight/: Cargo.toml  Readme.md  backend_env.sh  test_regtest.py
subprojects/gdk_rust/gdk_greenlight/src/: error.rs  lib.rs
subprojects/gdk_rust/gdk_greenlight/testnet/: gl_ca_crt.txt  gl_cert_chain.txt  gl_grpc_addr.txt  gl_nobody_key.txt
subprojects/gdk_rust/gdk_greenlight/tests/: integration.rs
subprojects/gdk_rust/gdk_registry/: Cargo.toml
subprojects/gdk_rust/gdk_registry/src/: assets_or_icons.rs  lib.rs
subprojects/gdk_rust/gdk_registry/src/hard_coded/: liquid_assets.json  liquid_icons.json
subprojects/gdk_rust/gdk_rust/: Cargo.toml
subprojects/gdk_rust/gdk_rust/src/: error.rs  exchange_rates.rs  lib.rs
subprojects/gdk_rust/gdk_rust/tests/: integration.rs
subprojects/gdk_rust/gdk_rust/tests/integration/: integration.rs
subprojects/gdk_rust/gdk_test/: Cargo.toml
subprojects/gdk_rust/gdk_test/src/: greenlight.rs  greenlight_session_ext.rs  lib.rs  lightning_node_ext.rs  test_session.rs  utils.rs
subprojects/gdk_rust/greenlight/libs/gl-plugin/src/: pb.rs
subprojects/gdk_rust/greenlight/libs/proto/: greenlight.proto
subprojects/gdk_rust/nix/: electrs.nix  libsecp256k1.nix  libwally.nix
subprojects/gdk_rust/src/: lib.rs
tools/: Dockerfile  archiver.sh  archiver.sh.gen.in  build.sh  builddeps.sh  buildgdk_rust.sh  buildopenssl.sh  buildtor.sh  bullseye_deps.sh  install_python.sh  swig_python.sh  ubuntu_18.04_deps.sh
